include files in the gem instead of forcing copy within parent apps

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,4 @@ tmp
 *.o
 *.a
 mkmf.log
-vendor/assets/stylesheets/*
-vendor/assets/javascripts/*
-!vendor/assets/stylesheets/.keep
-!vendor/assets/javascripts/.keep
+.rvmrc
