Automated: Update lazysizes   7a9ebee247038214d03348d88de401efd202f5d0 submodules/lazysizes (2.0.0-3-g7a9ebee)

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "submodules/normalize"]
 	path = submodules/normalize
 	url = git@github.com:necolas/normalize.css.git
+[submodule "submodules/lazysizes"]
+	path = submodules/lazysizes
+	url = git@github.com:aFarkas/lazysizes.git
