Automated: Update magnific   6b7a8088783cbce01034414c1fd2d8e1889093ae submodules/magnific (1.1.0)

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/lazysizes"]
 	path = submodules/lazysizes
 	url = git@github.com:aFarkas/lazysizes.git
+[submodule "submodules/magnific"]
+	path = submodules/magnific
+	url = git@github.com:dimsemenov/Magnific-Popup.git
